PHP(二)发言页面

--- a/fayan1.html
+++ b/fayan1.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <form action="fayan.php" method="POST">
 <body background="http://image.tianjimedia.com/uploadImages/2013/256/Z30NC8IU5KAN.jpg" >
 <a href='jilu.php'>查看聊天记录</a>&nbsp;&nbsp;
