PHP(二)注册页面

--- a/zhuce.html
+++ b/zhuce.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <a href="denglu.html">登录※</a>
 <form action="244.php" method="POST">
 <body background="http://image.tianjimedia.com/uploadImages/2013/256/Z30NC8IU5KAN.jpg" >
